# adapter

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  memory.x  rust-toolchain.toml  rustfmt.toml  test.sh  vpd.ron
.cargo/: config.toml
.github/workflows/: changelog.yaml  ci.yaml
docs/: Windows Device Enumeration.md
firmware/: Cargo.toml  build.rs  memory.x
firmware/src/: can.rs  main.rs
src/: can.rs  dfu.rs  main.rs  otp.rs  vpd.rs
tests/: configuration_fuzz.sh  fdtest.sh  send.sh  send_fuzz.sh
